2007-02-20  Alex Roitman  <shura@gramps-project.org>
	* src/images/Makefile.am: new icons.
	* src/images/*: new icons.
	* configure.in: Generate new Makefiles.

2007-02-19  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_Note.py (serialize,unserialize): Save and read
	change.
	* src/RelLib/_Repository.py (serialize,unserialize): Save and read
	change.
	* src/GrampsDb/_GrampsDbWriteXML.py): Export top-level notes and
	note references.
	* src/RelLib/_Note.py (set_type,get_type): Add methods.

2007-02-19  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_NoteView.py: Display data and columns
	* src/RelLib/__init__.py: import NoteType
	* src/DisplayModels/_NoteModel.py: Display data and columns
	* src/GrampsDbUtils/_GedcomParse.py: note import improvements

2007-02-19  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DescendChart.py: include blank pages option
	* src/plugins/AncestorChart2.py: include blank pages option

2007-02-19  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: note list support
	* src/Editors/_EditAddress.py: note list support
	* src/Editors/_EditLdsOrd.py: note list support
	* src/Editors/_EditSourceRef.py: note list support
	* src/Editors/_EditSource.py: note list support
	* src/Editors/_EditRepoRef.py: note list support
	* src/Editors/_EditAttribute.py: note list support
	* src/Editors/_EditPersonRef.py: note list support
	* src/Editors/_EditPerson.py: note list support
	* src/Editors/_EditMediaRef.py: note list support
	* src/Editors/_EditEventRef.py: note list support
	* src/Editors/_EditMedia.py: note list support
	* src/Editors/_EditRepository.py: note list support
	* src/Editors/_EditName.py: note list support
	* src/Editors/_EditChildRef.py: note list support
	* src/Editors/_EditFamily.py: note list support
	* src/Editors/_EditEvent.py: note list support
	* src/DisplayTabs/_NoteTab.py: note list support
	* src/GrampsDbUtils/_GedcomParse.py: note list support