@@ -238,6 +238,18 @@
       </schema>
 
       <schema>
+        <key>/schemas/apps/gramps/interface/releditbtn</key>
+        <applyto>/apps/gramps/interface/releditbtn</applyto>
+        <owner>gramps</owner>
+        <type>bool</type>
+        <default>0</default>
+        <locale name="C">
+          <short>Display edit buttons in Relationship View</short>
+          <long>This key enables display of edit buttons in Relationship View</long>
+        </locale>
+      </schema>
+
+      <schema>
         <key>/schemas/apps/gramps/interface/height</key>
         <applyto>/apps/gramps/interface/height</applyto>
         <owner>gramps</owner>
