@@ -1,4 +1,7 @@
 2007-02-20  Alex Roitman  <shura@gramps-project.org>
+	* src/Config/_GrampsConfigKeys.py (RELEDITBTN): Regenerate the
+	file to add missing items.
+	* data/gramps.schemas.in: Add missing key.
 	* src/images/Makefile.am: new icons.
 	* src/images/*: new icons.
 	* configure.in: Generate new Makefiles.
